# RANSAC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: ParameterEstimator.h  Point2D.h  RANSAC.h  lineParameterEstimator.h
src/: RANSAC.cpp  lineParameterEstimator.cpp
